feat(knownabi): wip advances on request
